@@ -117,10 +117,10 @@ MusEGlobal::GlobalConfigValues config = {
       QColor(200, 200, 200),  // waveEditBackgroundColor;
       {
         QFont(QString("arial"), 10, QFont::Normal),
-        QFont(QString("arial"), 8,  QFont::Normal),
+        QFont(QString("arial"), 7,  QFont::Normal),    // Mixer strips and midi track info panel
         QFont(QString("arial"), 10, QFont::Normal),
         QFont(QString("arial"), 10, QFont::Bold),
-        QFont(QString("arial"), 8,  QFont::Bold),    // timescale numbers
+        QFont(QString("arial"), 8,  QFont::Normal),    // Small numbers: Timescale and markers, part name overlay
         QFont(QString("Lucidatypewriter"), 14,  QFont::Bold),
         QFont(QString("arial"), 8,  QFont::Bold, true)  // Mixer strip labels. Looks and fits better with bold + italic than bold alone, 
                                                         //  at the price of only few more pixels than Normal mode.
@@ -172,8 +172,6 @@ MusEGlobal::GlobalConfigValues config = {
       QRect(0, 0, 400, 300),        // GeometryMain;
       QRect(0, 0, 200, 100),        // GeometryTransport;
       QRect(0, 0, 600, 200),        // GeometryBigTime;
-      QRect(0, 0, 400, 300),        // GeometryPianoroll;
-      QRect(0, 0, 400, 300),        // GeometryDrumedit;
       //QRect(0, 0, 300, 500),        // GeometryMixer;  // Obsolete
       {
          QString("Mixer A"),
@@ -191,14 +189,15 @@ MusEGlobal::GlobalConfigValues config = {
       false,                        // BigTimeVisible;
       false,                        // mixer1Visible;
       false,                        // mixer2Visible;
-      
       false,                        // markerVisible;  // This line was missing  2007-01-08 (willyfoobar)
+      true,                         // arrangerVisible;
       true,                         // showSplashScreen
       1,                            // canvasShowPartType 1 - names, 2 events
       5,                            // canvasShowPartEvent
       false,                        // canvasShowGrid;
       QString(""),                  // canvasBgPixmap;
-      QString(""),                  // styleSheetFile
+      QStringList(),                // canvasCustomBgList
+      QString(""),                  // default styleSheetFile - For built-in set to ":/style.qss"
       QString(""),                  // style
       QString(""),                  // externalWavEditor //this line was missing 2007-01-08 (willyfoobar)
       false,                        // useOldStyleStopShortCut
@@ -215,7 +214,10 @@ MusEGlobal::GlobalConfigValues config = {
       64,                           // minControlProcessPeriod
       false,                        // popupsDefaultStayOpen
       false,                        // leftMouseButtonCanDecrease
-      false                         // rangeMarkerWithoutMMBCheckBox
+      false,                         // rangeMarkerWithoutMMBCheckBox
+      true,                         // addHiddenTracks
+      true                          // unhideTracks
+      
       };
 
 //---------------------------------------------------------
