@@ -36,16 +36,16 @@
     <midiFilterCtrl3>0</midiFilterCtrl3>
     <midiFilterCtrl4>0</midiFilterCtrl4>
     <theme></theme>
-    <styleSheetFile>:/style.qss</styleSheetFile>
+    <styleSheetFile></styleSheetFile>
     <externalWavEditor>sweep</externalWavEditor>
     <useOldStyleStopShortCut>0</useOldStyleStopShortCut>
     <moveArmedCheckBox>0</moveArmedCheckBox>
     <popupsDefaultStayOpen>0</popupsDefaultStayOpen>
     <font0>arial,10,-1,5,50,0,0,0,0,0</font0>
-    <font1>arial,8,-1,5,50,0,0,0,0,0</font1>
+    <font1>arial,7,-1,5,50,0,0,0,0,0</font1>
     <font2>arial,10,-1,5,50,0,0,0,0,0</font2>
     <font3>arial,10,-1,5,75,0,0,0,0,0</font3>
-    <font4>arial,8,-1,5,75,0,0,0,0,0</font4>
+    <font4>arial,8,-1,5,50,0,0,0,0,0</font4>
     <font5>Lucidatypewriter,14,-1,5,75,0,0,0,0,0</font5>
     <font6>arial,8,-1,5,75,1,0,0,0,0</font6>
     <globalAlphaBlend>190</globalAlphaBlend>
